# ADS-B-Weather-Model

./: .gitattributes  .gitignore  Dockerfile  ML_REVIEW.md  README.md  diagnose.py  pyproject.toml  requirements.txt
scripts/: analyse_variability.py  animate_wind.py  convert_db.py  hp_search.py  plot_hp_results.py  test.py  train.py  visualise_uncertainty.py  visualise_wind.py
wind_map/: __init__.py  infer.py  module.py  network.py  preprocess.py  train.py  utils.py
