[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-map"
version = "0.1.0"
description = "Attentive Neural Process for predicting wind vectors from ADS-B observations"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "pillow",
    "scipy",
]

[project.optional-dependencies]
viz = ["contextily"]
search = ["scikit-optimize"]

[tool.setuptools.packages.find]
include = ["wind_map*"]

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__", "outputs", "examples"]
